2015-02-15  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2014-06-02  Jeff Law  <law@redhat.com>

	PR rtl-optimization/61094
	* ree.c (combine_reaching_defs): Do not reextend an insn if it
	was marked as do_no_reextend.  If a copy is needed to eliminate
	an extension, then mark it as do_not_reextend.

	2014-02-14  Jeff Law  <law@redhat.com>

	PR rtl-optimization/60131
	* ree.c (get_extended_src_reg): New function.
	(combine_reaching_defs): Use it rather than assuming location
	of REG.
	(find_and_remove_re): Verify first operand of extension is
	a REG before adding the insns to the copy list.

	2014-01-17  Jeff Law  <law@redhat.com>

	* ree.c (combine_set_extension): Temporarily disable test for
	changing number of hard registers.

	2014-01-15  Jeff Law  <law@redhat.com>

	PR tree-optimization/59747
	* ree.c (find_and_remove_re): Properly handle case where a second
	eliminated extension requires widening a copy created for elimination
	of a prior extension.
	(combine_set_extension): Ensure that the number of hard regs needed
	for a destination register does not change when we widen it.

	2014-01-10  Jeff Law  <law@redhat.com>

	PR middle-end/59743
	* ree.c (combine_reaching_defs): Ensure the defining statement
	occurs before the extension when optimizing extensions with
	different source and destination hard registers.

	2014-01-10  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/59754
	* ree.c (combine_reaching_defs): Disallow !SCALAR_INT_MODE_P
	modes in the REGNO != REGNO case.

	2014-01-08  Jeff Law  <law@redhat.com>

	* ree.c (get_sub_rtx): New function, extracted from...
	(merge_def_and_ext): Here.
	(combine_reaching_defs): Use get_sub_rtx.

	2014-01-07  Jeff Law  <law@redhat.com>

	PR middle-end/53623
	* ree.c (combine_set_extension): Handle case where source
	and destination registers in an extension insn are different.
	(combine_reaching_defs): Allow source and destination
	registers in extension to be different under limited